# hardware

./: docker-compose.yml
app/: README.md  pubspec.yaml
app/android/app/src/main/: AndroidManifest.xml
app/ios/Runner/: AppDelegate.swift  Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/ios/Runner.xcworkspace/: contents.xcworkspacedata
app/lib/: main.dart
app/lib/models/: prediction_data.dart  sensor_data.dart
app/lib/screens/: alarm_config_screen.dart  chart_screen.dart  dashboard_screen.dart
app/lib/services/: api_service.dart  local_alarm_service.dart  local_notification_service.dart  websocket_service.dart
app/lib/widgets/: dashboard_header.dart  loading_card.dart  prediction_card.dart  sensor_card.dart  sensor_chart.dart  widgets.dart
docs/: a01799283_bitacora.tex
microcontroller/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.esp32c3  sdkconfig.esp32c3.old
microcontroller/src/: main.cpp
server/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
server/src/: config.py  database.py  main.py  ml_service.py  models.py  routes.py
